# RubiksCube-OptimalSolver

./: README.md  client_gui.py  coord.py  cubie.py  defs.py  example.py  face.py  moves.py  performance.py  pruning.py  setup.cfg  solver.py  symmetries.py  test.py
package_src/optimal/: client_gui.py  coord.py  cubie.py  defs.py  face.py  moves.py  performance.py  pruning.py  solver.py  symmetries.py
