[metadata]
name = RubikOptimal
version = 1.0.3
author = Herbert Kociemba
author_email = kociemba@t-online.de
description = A package to optimally solve Rubik's cube.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hkociemba/RubiksCube-OptimalSolver
keywords='Rubik's Cube, Rubik, cube, solver, optimal, algorithm, Kociemba'
project_urls =
    Bug Tracker = https://github.com/hkociemba/RubiksCube-OptimalSolver/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = package_src
packages = find:
python_requires = >=3.4

[options.packages.find]
where = package_src